--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="button1">#474747</color>
+    <color name="abu">#A7A7A7</color>
     <color name="putih">#FFFFFF</color>
 </resources>
