--- a/app/src/main/res/layout/fragment_booking_step_three.xml
+++ b/app/src/main/res/layout/fragment_booking_step_three.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="STRP 3"
-            android:textSize="30sp"
-            android:layout_centerInParent="true"/>
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+    <devs.mulham.horizontalcalendar.HorizontalCalendarView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/calendar_step3"
+            android:background="@color/colorPrimary"
+            app:textColorSelected="#FFFF"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_time_slot_step3"
+            android:layout_marginTop="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
