--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="button1">#474747</color>
     <color name="abu">#A7A7A7</color>
     <color name="putih">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="white_transparent">#CBFFFFFF</color>
 </resources>
