--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_home"
-          android:icon="@drawable/ic_home_black_24dp"
-          android:title="Home"/>
-    <item android:id="@+id/action_shopping"
-          android:icon="@drawable/ic_shopping_cart_white_24dp"
-          android:title="Shopping"/>
+    <item
+            android:id="@+id/fragment_home"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="Home" />
+    <item
+            android:id="@+id/fragment_shopping"
+            android:icon="@drawable/ic_shopping_cart_white_24dp"
+            android:title="Shopping" />
 </menu>
