--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -8,7 +8,7 @@
         tools:context=".ui.booking.BookingActivity">
 
     <com.shuhart.stepview.StepView
-            android:id="@+id/stepview_booking"
+            android:id="@+id/step_view_booking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -25,8 +25,8 @@
     <com.sstudio.otocare.common.NonSwipeViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/viewpager_bookig"
-            android:layout_below="@+id/stepview_booking"
+            android:id="@+id/viewpager_booking"
+            android:layout_below="@+id/step_view_booking"
             android:layout_above="@+id/layout_button">
 
     </com.sstudio.otocare.common.NonSwipeViewPager>
@@ -43,7 +43,7 @@
         <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_prevstep"
+                android:id="@+id/btn_prev_step"
                 android:layout_weight="1"
                 android:enabled="false"
                 android:text="Prev"
@@ -53,7 +53,7 @@
         <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_nextstep"
+                android:id="@+id/btn_next_step"
                 android:enabled="false"
                 android:text="Next"
                 android:layout_weight="1"
