--- a/app/src/main/res/layout/fragment_booking_step_four.xml
+++ b/app/src/main/res/layout/fragment_booking_step_four.xml
@@ -6,30 +6,27 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
-
-
-    <ImageView
-            android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="wrap_content">
-
-        <TextView
+        <ImageView
+                android:src="@drawable/logo"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Terimakasih telah memesan layanan kami :)"
-                android:textAllCaps="true"
-                android:textAlignment="center"
-                android:textColor="#363636"
+                android:layout_height="wrap_content" />
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:padding="8dp"
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Terimakasih telah memesan layanan kami :)"
+                    android:textAllCaps="true"
+                    android:textAlignment="center"
+                    android:textColor="#363636"
                 android:textSize="18sp"
                 android:layout_gravity="center_horizontal"/>
 
@@ -73,7 +70,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_booking_teknisi"
+                    android:id="@+id/tv_booking_technician"
                     android:textSize="14sp"
                     android:layout_marginLeft="4dp"
                     android:text="Sholi"/>
@@ -90,7 +87,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_nama_salon"
+                android:id="@+id/tv_salon_name"
                 android:text="Salon#1"
                 android:textStyle="bold"/>
 
@@ -109,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:id="@+id/tv_booking4_telp"
+                    android:id="@+id/tv_phone"
                     android:layout_marginLeft="4dp"
                     android:text="08567888751"/>
 
@@ -129,7 +126,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_booking4_waktu"
+                    android:id="@+id/tv_time"
                     android:textSize="14sp"
                     android:layout_marginLeft="4dp"
                     android:text="07:00 - 09:00"/>
@@ -150,7 +147,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_booking4_lokasi"
+                    android:id="@+id/tv_location"
                     android:textSize="14sp"
                     android:layout_marginLeft="4dp"
                     android:text="Jl. Ngagel"/>
@@ -160,7 +157,7 @@
     </LinearLayout>
 
     <Button
-            android:id="@+id/btn_booking4_konfirm"
+            android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/button1"
