--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -14,53 +14,27 @@
             android:padding="16dp"
             app:sv_animationType="None"
             app:sv_stepPadding="12dp"
-            app:sv_selectedCircleColor="@color/button1"
-            app:sv_selectedStepNumberColor="@color/putih"
-            app:sv_selectedTextColor="@color/button1"
-            app:sv_doneCircleColor="@color/colorAccent"
-            app:sv_doneStepLineColor="@color/colorAccent"
-            app:sv_doneTextColor="@color/putih"
-            app:sv_doneStepMarkColor="@color/putih"/>
+            app:sv_selectedCircleColor="@color/dark_grey"
+            app:sv_selectedStepNumberColor="@color/white"
+            app:sv_selectedTextColor="@color/dark_grey"
+            app:sv_doneCircleColor="@color/colorPrimary"
+            app:sv_doneStepLineColor="@color/colorPrimary"
+            app:sv_doneTextColor="@color/white"
+            app:sv_doneStepMarkColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.sstudio.otocare.common.NonSwipeViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/viewpager_booking"
-            android:layout_below="@+id/step_view_booking"
-            android:layout_above="@+id/layout_button">
+    <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/booking_nav_host"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:navGraph="@navigation/booking_nav"
+            app:layout_constraintTop_toBottomOf="@+id/step_view_booking"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </com.sstudio.otocare.common.NonSwipeViewPager>
-
-    <LinearLayout
-            android:id="@+id/layout_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:padding="4dp"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-
-        <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_prev_step"
-                android:layout_weight="1"
-                android:enabled="false"
-                android:text="Prev"
-                android:layout_marginLeft="4dp"
-                android:textColor="@color/putih"
-                android:background="@color/button1"/>
-        <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_next_step"
-                android:enabled="false"
-                android:text="Next"
-                android:layout_weight="1"
-                android:layout_marginLeft="4dp"
-                android:textColor="@color/putih"
-                android:background="@color/button1"                />
-
-
-    </LinearLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
