--- a/app/src/main/res/layout/fragment_booking_step_four.xml
+++ b/app/src/main/res/layout/fragment_booking_step_four.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_height="match_parent">
+
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
         <ImageView
                 android:src="@drawable/logo"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:ignore="contentDescription" />
 
         <LinearLayout
                 android:orientation="vertical"
@@ -44,14 +46,15 @@
                     android:src="@drawable/ic_event_note_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="contentDescription" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_booking_time"
                     android:textSize="14sp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="10:00 28/03/2019"/>
 
         </LinearLayout>
@@ -65,14 +68,15 @@
                     android:src="@drawable/ic_account_circle_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="contentDescription" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_booking_technician"
                     android:textSize="14sp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="Sholi"/>
 
         </LinearLayout>
@@ -87,7 +91,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_salon_name"
+                android:id="@+id/tv_garage_name"
                 android:text="Salon#1"
                 android:textStyle="bold"/>
 
@@ -100,14 +104,15 @@
                     android:src="@drawable/ic_phone_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="contentDescription" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:id="@+id/tv_phone"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="08567888751"/>
 
         </LinearLayout>
@@ -121,14 +126,15 @@
                     android:src="@drawable/ic_access_time_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="contentDescription" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_time"
                     android:textSize="14sp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="07:00 - 09:00"/>
 
         </LinearLayout>
@@ -142,14 +148,15 @@
                     android:src="@drawable/ic_location_on_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="contentDescription" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_location"
                     android:textSize="14sp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="Jl. Ngagel"/>
 
         </LinearLayout>
