--- a/app/src/main/res/layout/item_garage.xml
+++ b/app/src/main/res/layout/item_garage.xml
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardCornerRadius="4dp"
+        android:orientation="vertical"
         android:id="@+id/card_garage"
-        android:layout_height="match_parent">
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="3dp">
 
     <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:orientation="vertical">
-
-        <ImageView
-                android:id="@+id/iv_account_garage"
-                android:src="@drawable/ic_account_circle_black_24dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                tools:ignore="contentDescription" />
+            android:padding="16dp">
 
         <TextView
+                android:id="@+id/tv_garage_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_garage_name"
                 android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                android:text="Salon #1" />
 
-        <RatingBar
-                android:layout_width="wrap_content"
+        <TextView
+                android:id="@+id/tv_garage_address"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/rating_garage"
-                android:max="5"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="16sp"
+                android:textStyle="italic"
+                android:gravity="center_horizontal"
+                android:text="Alamat salon #1" />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
