--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="dark_grey">#2E2E2E</color>
     <color name="light_grey">#A1A1A1</color>
     <color name="red_text">#FA3131</color>
+    <color name="grey">#606060</color>
 </resources>
