--- a/app/src/main/res/layout/fragment_booking_step_four.xml
+++ b/app/src/main/res/layout/fragment_booking_step_four.xml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                app:titleTextColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
+                android:id="@+id/iv_logo"
                 android:src="@drawable/logo"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:ignore="contentDescription" />
+                tools:ignore="contentDescription"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <LinearLayout
+                android:id="@+id/layout_info"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:padding="8dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_logo">
 
             <TextView
                     android:layout_width="match_parent"
@@ -29,148 +48,152 @@
                     android:textAllCaps="true"
                     android:textAlignment="center"
                     android:textColor="#363636"
-                android:textSize="18sp"
-                android:layout_gravity="center_horizontal"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Detail Pesanan"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:src="@drawable/ic_event_note_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    tools:ignore="contentDescription" />
+                    android:textSize="18sp"
+                    android:layout_gravity="center_horizontal" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_booking_time"
-                    android:textSize="14sp"
-                    android:layout_marginStart="4dp"
-                    android:text="10:00 28/03/2019"/>
+                    android:text="Detail Pesanan" />
 
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:src="@drawable/ic_account_circle_black_24dp"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    tools:ignore="contentDescription" />
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:src="@drawable/ic_event_note_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        tools:ignore="contentDescription" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_booking_time"
+                        android:textSize="14sp"
+                        android:layout_marginStart="4dp"
+                        android:text="10:00 28/03/2019" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:src="@drawable/ic_account_circle_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        tools:ignore="contentDescription" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_booking_technician"
+                        android:textSize="14sp"
+                        android:layout_marginStart="4dp"
+                        android:text="Sholi" />
+
+            </LinearLayout>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/button1"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="8dp" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_booking_technician"
-                    android:textSize="14sp"
-                    android:layout_marginStart="4dp"
-                    android:text="Sholi"/>
+                    android:id="@+id/tv_garage_name"
+                    android:text="Salon#1"
+                    android:textStyle="bold" />
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:src="@drawable/ic_phone_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        tools:ignore="contentDescription" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:id="@+id/tv_phone"
+                        android:layout_marginStart="4dp"
+                        android:text="08567888751" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:src="@drawable/ic_access_time_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        tools:ignore="contentDescription" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_time"
+                        android:textSize="14sp"
+                        android:layout_marginStart="4dp"
+                        android:text="07:00 - 09:00" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:src="@drawable/ic_location_on_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        tools:ignore="contentDescription" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_location"
+                        android:textSize="14sp"
+                        android:layout_marginStart="4dp"
+                        android:text="Jl. Ngagel" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <View
+        <Button
+                android:id="@+id/btn_confirm"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="wrap_content"
                 android:background="@color/button1"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"/>
+                android:text="Konfirmasi"
+                android:textColor="@color/putih"
+                android:layout_margin="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/layout_info" />
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_garage_name"
-                android:text="Salon#1"
-                android:textStyle="bold"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:src="@drawable/ic_phone_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    tools:ignore="contentDescription" />
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:id="@+id/tv_phone"
-                    android:layout_marginStart="4dp"
-                    android:text="08567888751"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:src="@drawable/ic_access_time_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    tools:ignore="contentDescription" />
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_time"
-                    android:textSize="14sp"
-                    android:layout_marginStart="4dp"
-                    android:text="07:00 - 09:00"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:src="@drawable/ic_location_on_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    tools:ignore="contentDescription" />
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_location"
-                    android:textSize="14sp"
-                    android:layout_marginStart="4dp"
-                    android:text="Jl. Ngagel"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
-            android:id="@+id/btn_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/button1"
-            android:text="Konfirmasi"
-            android:textColor="@color/putih"
-            android:layout_margin="5dp"
-            />
-    </LinearLayout>
 </ScrollView>
