--- a/app/src/main/res/layout/fragment_booking_step_three.xml
+++ b/app/src/main/res/layout/fragment_booking_step_three.xml
@@ -1,24 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <devs.mulham.horizontalcalendar.HorizontalCalendarView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/calendar_step3"
-            android:background="@color/colorPrimary"
-            app:textColorSelected="#FFFF"/>
+            android:background="@color/red_light"
+            app:textColorSelected="#FFFF"
+            app:textColorNormal="@color/light_grey"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_time_slot_step3"
-            android:layout_marginTop="4dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            tools:listitem="@layout/item_time_slot"
+            app:layout_constraintTop_toBottomOf="@+id/calendar_step3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/layout_btn"
+            app:layout_constraintEnd_toEndOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+
+    <androidx.cardview.widget.CardView
+            android:id="@+id/layout_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+                android:layout_width="100dp"
+                android:layout_height="35dp"
+                android:id="@+id/btn_next_step"
+                android:enabled="false"
+                android:text="Next"
+                android:layout_gravity="end"
+                android:layout_margin="15dp"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:background="@drawable/button_disabled_radius"
+                android:layout_marginStart="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
