--- a/app/src/main/res/layout/fragment_booking_step_two.xml
+++ b/app/src/main/res/layout/fragment_booking_step_two.xml
@@ -53,16 +53,16 @@
             app:layout_constraintStart_toStartOf="parent">
 
         <Button
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="35dp"
                 android:id="@+id/btn_next_step"
                 android:enabled="false"
                 android:text="Next"
                 android:layout_gravity="end"
-                android:layout_margin="25dp"
+                android:layout_margin="15dp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:background="@drawable/button_primary_radius"
+                android:background="@drawable/button_disabled_radius"
                 android:layout_marginStart="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
