--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -96,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -106,7 +106,12 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_outline_shopping_cart_24"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/iv_cart"
+                        app:layout_constraintHorizontal_bias="0.492" />
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -114,9 +119,27 @@
                         android:text="Cart"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize" />
+                        android:textSize="@dimen/textCardSize"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_cart"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_cart"
+                        app:layout_constraintStart_toStartOf="@+id/iv_cart" />
 
-            </LinearLayout>
+                <TextView
+                        android:id="@+id/cart_badge"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="end|top"
+                        android:background="@drawable/notification_badge"
+                        android:gravity="center"
+                        android:padding="1dp"
+                        android:textColor="@android:color/white"
+                        android:textSize="10sp"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_cart"
+                        app:layout_constraintTop_toTopOf="@+id/iv_cart"
+                        app:layout_constraintStart_toEndOf="@+id/iv_cart" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
 
