--- a/app/src/main/res/layout/item_package.xml
+++ b/app/src/main/res/layout/item_package.xml
@@ -29,7 +29,7 @@
             <ImageView
                     android:layout_width="130dp"
                     android:layout_height="130dp"
-                    android:id="@+id/imageView"
+                    android:id="@+id/iv_package"
                     android:src="@color/dark_grey"
                     tools:ignore="contentDescription" />
         </androidx.cardview.widget.CardView>
@@ -77,7 +77,7 @@
         <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_detail"
+                android:id="@+id/btn_cart"
                 android:textSize="18sp"
                 android:text="Detail"
                 android:layout_margin="15dp"
@@ -93,9 +93,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ccp_ic_arrow_drop_down"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_detail"
-                app:layout_constraintTop_toTopOf="@+id/btn_detail"
-                app:layout_constraintEnd_toEndOf="@+id/btn_detail"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_cart"
+                app:layout_constraintTop_toTopOf="@+id/btn_cart"
+                app:layout_constraintEnd_toEndOf="@+id/btn_cart"
                 app:layout_constraintHorizontal_bias="0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
