--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="abu">#A7A7A7</color>
     <color name="putih">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="white_grey">#D3D3D3</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="white_transparent">#CBFFFFFF</color>
     <color name="dark_grey">#2E2E2E</color>
