--- a/app/src/main/res/layout/fragment_booking_step_one.xml
+++ b/app/src/main/res/layout/fragment_booking_step_one.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fragment_booking_step_one"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey"
-        android:orientation="vertical">
+        android:background="@color/grey">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
